# team-10

./: .gitmodules  Cellsem_segmentation.ipynb  README.md  README.org  find_high_boundary_areas.py  get_average_grain_size.py  get_average_orientation.py  pyproject.toml  select_samples_grain_size.py
.devcontainer/: devcontainer.json
.ipynb_checkpoints/: Cellsem_segmentation-checkpoint.ipynb
extended_functions/: calculate_centroids.py  calculate_clusters.py  calculate_uniformity.py
operators/: README.md
operators/image_converter/: Containerfile  README.md  build.sh  operator.json  run.py
operators/post-process/: Containerfile  README.md  build.sh  operator.json  run.py
operators/scope/: Containerfile  README.md  build.sh  daq-agent.py  operator.json  pyproject.toml  run.py
operators/scope-downstream/: Containerfile  README.md  build.sh  operator.json  run.py
operators/scope/assets/: Image_10um_01.h5
operators/scope/tests/: test_scope.py
operators/segmentation/: Containerfile  README.md  build.sh  operator.json  run.py  warmup.py
