[project]
authors = [{name = "Panayotis Manganaris", email = "panos.manganaris@gmail.com"}]
dependencies = ["opencv-python>=4.10.0.84,<5"]
description = "Add a short description here"
name = "team-10"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
team_10 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pytorch = ">=2.5.1,<3"
